[tool.poetry]
name = "pixela2img"
version = "2018.1"
description = "Create image files or objects from pixela svg graphs."
authors = ["ryosms"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/ryosms/pixela2img"

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^5.4"
defusedxml = "^0.5.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
